basic configuration for h2

--- a/etl-backend/src/main/resources/application.properties
+++ b/etl-backend/src/main/resources/application.properties
@@ -1,10 +1,21 @@
-## Spring DATASOURCE
-spring.datasource.url = ${SPRING_DATASOURCE_URL}
-spring.datasource.username = ${SPRING_DATASOURCE_USERNAME}
-spring.datasource.password = ${SPRING_DATASOURCE_PASSWORD}
 
-## Hibernate Properties
+# H2
+spring.h2.console.enabled = true
+spring.h2.console.path=/h2
+
+# Spring DATASOURCE
+spring.datasource.url = jdbc:h2:file:~/etl-backend
+spring.datasource.username = admin
+spring.datasource.password =
+spring.datasource.driver-class-name=org.h2.Driver
+
+# Hibernate Properties
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = none
+
+datasource.flyway.url=jdbc:h2:file:~/etl-backend
+datasource.flyway.username=admin
+datasource.flyway.password=
+datasource.flyway.driver-class-name=org.h2.Driver
