--- a/etl-backend/pom.xml
+++ b/etl-backend/pom.xml
@@ -53,6 +53,11 @@
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.4</version>
+		</dependency>
 
 	</dependencies>
 
