--- a/etl-backend/pom.xml
+++ b/etl-backend/pom.xml
@@ -58,6 +58,11 @@
 			<artifactId>lombok</artifactId>
 			<version>1.18.4</version>
 		</dependency>
+		<dependency>
+			<groupId>org.jsoup</groupId>
+			<artifactId>jsoup</artifactId>
+			<version>1.11.3</version>
+		</dependency>
 
 	</dependencies>
 
