--- a/etl-backend/src/main/resources/application.properties
+++ b/etl-backend/src/main/resources/application.properties
@@ -4,18 +4,22 @@ spring.h2.console.enabled = true
 spring.h2.console.path=/h2
 
 # Spring DATASOURCE
-spring.datasource.url = jdbc:h2:file:~/etl-backend
+spring.datasource.url = jdbc:h2:file:~/etl-backend;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.username = admin
 spring.datasource.password =
 spring.datasource.driver-class-name=org.h2.Driver
 
-# Hibernate Properties
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+## Hibernate Properties
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jackson.serialization.fail-on-empty-beans=false 
+# Przydalo by sie to naprawic
 
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto = none
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.show-sql = true
 
-datasource.flyway.url=jdbc:h2:file:~/etl-backend
-datasource.flyway.username=admin
-datasource.flyway.password=
-datasource.flyway.driver-class-name=org.h2.Driver
+##Flyway <- TODO
+#spring.flyway.locations=classpath:/db/migration
+#spring.flyway.baseline-on-migrate = true
+
