--- a/etl-frontend/package.json
+++ b/etl-frontend/package.json
@@ -4,10 +4,13 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^3.4.0",
+    "@material-ui/icons": "^3.0.1",
     "@material-ui/styles": "^3.0.0-alpha.0",
     "autoprefixer": "^9.3.1",
+    "axios": "^0.18.0",
     "babel-plugin-react-flow-props-to-prop-types": "^0.15.0",
     "css-loader": "^1.0.1",
+    "material-table": "^1.3.0",
     "node-sass": "^4.10.0",
     "postcss-loader": "^3.0.0",
     "precss": "^4.0.0",
@@ -18,6 +21,9 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.1",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
+    "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "styled-components": "^4.1.0"
   },
@@ -36,9 +42,13 @@
   ],
   "devDependencies": {
     "@babel/core": "^7.1.6",
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
+    "@babel/plugin-proposal-decorators": "^7.1.6",
     "@babel/preset-env": "^7.1.6",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.4",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "webpack": "^4.26.0",
